Make sure wide code doesn't overflow width

--- a/src/question-editor/PartEditor.css
+++ b/src/question-editor/PartEditor.css
@@ -43,3 +43,7 @@
   margin: 10px;
   padding: 10px;
 }
+
+.confirmed-part {
+  max-width: 80%;
+}
