--- a/src/question-viewer/QuestionPart.css
+++ b/src/question-viewer/QuestionPart.css
@@ -3,5 +3,4 @@
   border-radius: 5px;
   margin: 10px;
   padding: 10px;
-  min-width: 65vw;
 }
